parser.output
Terminals which are not used

   INC_TOKEN
   DEC_TOKEN


State 44 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: definitions main

    2 definitions: int_function definitions
    3            | /* empty */

    4 int_function: function_header '{' instruction_array RETURN_TOKEN expression ';' '}'

    5 function_header: INT_TOKEN ID_TOKEN '(' parameter_list ')'
    6                | INT_TOKEN ID_TOKEN '(' ')'

    7 parameter_list: parameter_list ',' INT_TOKEN ID_TOKEN
    8               | INT_TOKEN ID_TOKEN

    9 main: VOID_TOKEN MAIN_TOKEN '(' ')' '{' instruction_array '}'

   10 instruction_array: instruction_array instruction
   11                  | /* empty */

   12 instruction: assignment ';'
   13            | if_instruction
   14            | if_else_instruction
   15            | while_instruction
   16            | expression ';'

   17 assignment: ID_TOKEN '=' expression

   18 expression: value
   19           | '-' expression
   20           | expression '+' expression
   21           | expression '-' expression
   22           | expression '*' expression
   23           | expression '/' expression
   24           | '(' expression ')'

   25 value: NUM_TOKEN
   26      | ID_TOKEN
   27      | apply_function

   28 if_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}'

   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' ELSE_TOKEN '{' instruction_array '}'

   30 while_instruction: WHILE_TOKEN '(' condition ')' '{' instruction_array '}'

   31 condition: expression '<' expression
   32          | expression '>' expression
   33          | expression EQUAL_TOKEN expression

   34 apply_function: ID_TOKEN '(' apply_list ')'
   35               | ID_TOKEN '(' ')'

   36 apply_list: apply_list ',' expression
   37           | expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 9 24 28 29 30 34 35
')' (41) 5 6 9 24 28 29 30 34 35
'*' (42) 22
'+' (43) 20
',' (44) 7 36
'-' (45) 19 21
'/' (47) 23
';' (59) 4 12 16
'<' (60) 31
'=' (61) 17
'>' (62) 32
'{' (123) 4 9 28 29 30
'}' (125) 4 9 28 29 30
error (256)
IF_TOKEN (258) 28 29
ELSE_TOKEN (259) 29
WHILE_TOKEN (260) 30
INC_TOKEN (261)
DEC_TOKEN (262)
EQUAL_TOKEN (263) 33
INT_TOKEN (264) 5 6 7 8
VOID_TOKEN (265) 9
RETURN_TOKEN (266) 4
MAIN_TOKEN (267) 9
NUM_TOKEN (268) 25
ID_TOKEN (269) 5 6 7 8 17 26 34 35
IF_PRIOR (270)
IF_ELSE_PRIOR (271)
UMINUS (272)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
definitions (33)
    on left: 2 3, on right: 1 2
int_function (34)
    on left: 4, on right: 2
function_header (35)
    on left: 5 6, on right: 4
parameter_list (36)
    on left: 7 8, on right: 5 7
main (37)
    on left: 9, on right: 1
instruction_array (38)
    on left: 10 11, on right: 4 9 10 28 29 30
instruction (39)
    on left: 12 13 14 15 16, on right: 10
assignment (40)
    on left: 17, on right: 12
expression (41)
    on left: 18 19 20 21 22 23 24, on right: 4 16 17 19 20 21 22 23
    24 31 32 33 36 37
value (42)
    on left: 25 26 27, on right: 18
if_instruction (43)
    on left: 28, on right: 13
if_else_instruction (44)
    on left: 29, on right: 14
while_instruction (45)
    on left: 30, on right: 15
condition (46)
    on left: 31 32 33, on right: 28 29 30
apply_function (47)
    on left: 34 35, on right: 27
apply_list (48)
    on left: 36 37, on right: 34 36


state 0

    0 $accept: . program $end

    INT_TOKEN  shift, and go to state 1

    $default  reduce using rule 3 (definitions)

    program          go to state 2
    definitions      go to state 3
    int_function     go to state 4
    function_header  go to state 5


state 1

    5 function_header: INT_TOKEN . ID_TOKEN '(' parameter_list ')'
    6                | INT_TOKEN . ID_TOKEN '(' ')'

    ID_TOKEN  shift, and go to state 6


state 2

    0 $accept: program . $end

    $end  shift, and go to state 7


state 3

    1 program: definitions . main

    VOID_TOKEN  shift, and go to state 8

    main  go to state 9


state 4

    2 definitions: int_function . definitions

    INT_TOKEN  shift, and go to state 1

    $default  reduce using rule 3 (definitions)

    definitions      go to state 10
    int_function     go to state 4
    function_header  go to state 5


state 5

    4 int_function: function_header . '{' instruction_array RETURN_TOKEN expression ';' '}'

    '{'  shift, and go to state 11


state 6

    5 function_header: INT_TOKEN ID_TOKEN . '(' parameter_list ')'
    6                | INT_TOKEN ID_TOKEN . '(' ')'

    '('  shift, and go to state 12


state 7

    0 $accept: program $end .

    $default  accept


state 8

    9 main: VOID_TOKEN . MAIN_TOKEN '(' ')' '{' instruction_array '}'

    MAIN_TOKEN  shift, and go to state 13


state 9

    1 program: definitions main .

    $default  reduce using rule 1 (program)


state 10

    2 definitions: int_function definitions .

    $default  reduce using rule 2 (definitions)


state 11

    4 int_function: function_header '{' . instruction_array RETURN_TOKEN expression ';' '}'

    $default  reduce using rule 11 (instruction_array)

    instruction_array  go to state 14


state 12

    5 function_header: INT_TOKEN ID_TOKEN '(' . parameter_list ')'
    6                | INT_TOKEN ID_TOKEN '(' . ')'

    INT_TOKEN  shift, and go to state 15
    ')'        shift, and go to state 16

    parameter_list  go to state 17


state 13

    9 main: VOID_TOKEN MAIN_TOKEN . '(' ')' '{' instruction_array '}'

    '('  shift, and go to state 18


state 14

    4 int_function: function_header '{' instruction_array . RETURN_TOKEN expression ';' '}'
   10 instruction_array: instruction_array . instruction

    IF_TOKEN      shift, and go to state 19
    WHILE_TOKEN   shift, and go to state 20
    RETURN_TOKEN  shift, and go to state 21
    NUM_TOKEN     shift, and go to state 22
    ID_TOKEN      shift, and go to state 23
    '-'           shift, and go to state 24
    '('           shift, and go to state 25

    instruction          go to state 26
    assignment           go to state 27
    expression           go to state 28
    value                go to state 29
    if_instruction       go to state 30
    if_else_instruction  go to state 31
    while_instruction    go to state 32
    apply_function       go to state 33


state 15

    8 parameter_list: INT_TOKEN . ID_TOKEN

    ID_TOKEN  shift, and go to state 34


state 16

    6 function_header: INT_TOKEN ID_TOKEN '(' ')' .

    $default  reduce using rule 6 (function_header)


state 17

    5 function_header: INT_TOKEN ID_TOKEN '(' parameter_list . ')'
    7 parameter_list: parameter_list . ',' INT_TOKEN ID_TOKEN

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


state 18

    9 main: VOID_TOKEN MAIN_TOKEN '(' . ')' '{' instruction_array '}'

    ')'  shift, and go to state 37


state 19

   28 if_instruction: IF_TOKEN . '(' condition ')' '{' instruction_array '}'
   29 if_else_instruction: IF_TOKEN . '(' condition ')' '{' instruction_array '}' ELSE_TOKEN '{' instruction_array '}'

    '('  shift, and go to state 38


state 20

   30 while_instruction: WHILE_TOKEN . '(' condition ')' '{' instruction_array '}'

    '('  shift, and go to state 39


state 21

    4 int_function: function_header '{' instruction_array RETURN_TOKEN . expression ';' '}'

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 41
    value           go to state 29
    apply_function  go to state 33


state 22

   25 value: NUM_TOKEN .

    $default  reduce using rule 25 (value)


state 23

   17 assignment: ID_TOKEN . '=' expression
   26 value: ID_TOKEN .
   34 apply_function: ID_TOKEN . '(' apply_list ')'
   35               | ID_TOKEN . '(' ')'

    '='  shift, and go to state 42
    '('  shift, and go to state 43

    $default  reduce using rule 26 (value)


state 24

   19 expression: '-' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 44
    value           go to state 29
    apply_function  go to state 33


state 25

   24 expression: '(' . expression ')'

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 45
    value           go to state 29
    apply_function  go to state 33


state 26

   10 instruction_array: instruction_array instruction .

    $default  reduce using rule 10 (instruction_array)


state 27

   12 instruction: assignment . ';'

    ';'  shift, and go to state 46


state 28

   16 instruction: expression . ';'
   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    ';'  shift, and go to state 51


state 29

   18 expression: value .

    $default  reduce using rule 18 (expression)


state 30

   13 instruction: if_instruction .

    $default  reduce using rule 13 (instruction)


state 31

   14 instruction: if_else_instruction .

    $default  reduce using rule 14 (instruction)


state 32

   15 instruction: while_instruction .

    $default  reduce using rule 15 (instruction)


state 33

   27 value: apply_function .

    $default  reduce using rule 27 (value)


state 34

    8 parameter_list: INT_TOKEN ID_TOKEN .

    $default  reduce using rule 8 (parameter_list)


state 35

    5 function_header: INT_TOKEN ID_TOKEN '(' parameter_list ')' .

    $default  reduce using rule 5 (function_header)


state 36

    7 parameter_list: parameter_list ',' . INT_TOKEN ID_TOKEN

    INT_TOKEN  shift, and go to state 52


state 37

    9 main: VOID_TOKEN MAIN_TOKEN '(' ')' . '{' instruction_array '}'

    '{'  shift, and go to state 53


state 38

   28 if_instruction: IF_TOKEN '(' . condition ')' '{' instruction_array '}'
   29 if_else_instruction: IF_TOKEN '(' . condition ')' '{' instruction_array '}' ELSE_TOKEN '{' instruction_array '}'

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 54
    value           go to state 29
    condition       go to state 55
    apply_function  go to state 33


state 39

   30 while_instruction: WHILE_TOKEN '(' . condition ')' '{' instruction_array '}'

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 54
    value           go to state 29
    condition       go to state 56
    apply_function  go to state 33


state 40

   26 value: ID_TOKEN .
   34 apply_function: ID_TOKEN . '(' apply_list ')'
   35               | ID_TOKEN . '(' ')'

    '('  shift, and go to state 43

    $default  reduce using rule 26 (value)


state 41

    4 int_function: function_header '{' instruction_array RETURN_TOKEN expression . ';' '}'
   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    ';'  shift, and go to state 57


state 42

   17 assignment: ID_TOKEN '=' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 58
    value           go to state 29
    apply_function  go to state 33


state 43

   34 apply_function: ID_TOKEN '(' . apply_list ')'
   35               | ID_TOKEN '(' . ')'

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25
    ')'        shift, and go to state 59

    expression      go to state 60
    value           go to state 29
    apply_function  go to state 33
    apply_list      go to state 61


state 44

   19 expression: '-' expression .
   20           | expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    '+'       [reduce using rule 19 (expression)]
    '-'       [reduce using rule 19 (expression)]
    '*'       [reduce using rule 19 (expression)]
    '/'       [reduce using rule 19 (expression)]
    $default  reduce using rule 19 (expression)


state 45

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   24           | '(' expression . ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    ')'  shift, and go to state 62


state 46

   12 instruction: assignment ';' .

    $default  reduce using rule 12 (instruction)


state 47

   20 expression: expression '+' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 63
    value           go to state 29
    apply_function  go to state 33


state 48

   21 expression: expression '-' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 64
    value           go to state 29
    apply_function  go to state 33


state 49

   22 expression: expression '*' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 65
    value           go to state 29
    apply_function  go to state 33


state 50

   23 expression: expression '/' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 66
    value           go to state 29
    apply_function  go to state 33


state 51

   16 instruction: expression ';' .

    $default  reduce using rule 16 (instruction)


state 52

    7 parameter_list: parameter_list ',' INT_TOKEN . ID_TOKEN

    ID_TOKEN  shift, and go to state 67


state 53

    9 main: VOID_TOKEN MAIN_TOKEN '(' ')' '{' . instruction_array '}'

    $default  reduce using rule 11 (instruction_array)

    instruction_array  go to state 68


state 54

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   31 condition: expression . '<' expression
   32          | expression . '>' expression
   33          | expression . EQUAL_TOKEN expression

    EQUAL_TOKEN  shift, and go to state 69
    '+'          shift, and go to state 47
    '-'          shift, and go to state 48
    '*'          shift, and go to state 49
    '/'          shift, and go to state 50
    '<'          shift, and go to state 70
    '>'          shift, and go to state 71


state 55

   28 if_instruction: IF_TOKEN '(' condition . ')' '{' instruction_array '}'
   29 if_else_instruction: IF_TOKEN '(' condition . ')' '{' instruction_array '}' ELSE_TOKEN '{' instruction_array '}'

    ')'  shift, and go to state 72


state 56

   30 while_instruction: WHILE_TOKEN '(' condition . ')' '{' instruction_array '}'

    ')'  shift, and go to state 73


state 57

    4 int_function: function_header '{' instruction_array RETURN_TOKEN expression ';' . '}'

    '}'  shift, and go to state 74


state 58

   17 assignment: ID_TOKEN '=' expression .
   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 17 (assignment)


state 59

   35 apply_function: ID_TOKEN '(' ')' .

    $default  reduce using rule 35 (apply_function)


state 60

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   37 apply_list: expression .

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 37 (apply_list)


state 61

   34 apply_function: ID_TOKEN '(' apply_list . ')'
   36 apply_list: apply_list . ',' expression

    ')'  shift, and go to state 75
    ','  shift, and go to state 76


state 62

   24 expression: '(' expression ')' .

    $default  reduce using rule 24 (expression)


state 63

   20 expression: expression . '+' expression
   20           | expression '+' expression .
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression

    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 20 (expression)


state 64

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   21           | expression '-' expression .
   22           | expression . '*' expression
   23           | expression . '/' expression

    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 21 (expression)


state 65

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   22           | expression '*' expression .
   23           | expression . '/' expression

    $default  reduce using rule 22 (expression)


state 66

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   23           | expression '/' expression .

    $default  reduce using rule 23 (expression)


state 67

    7 parameter_list: parameter_list ',' INT_TOKEN ID_TOKEN .

    $default  reduce using rule 7 (parameter_list)


state 68

    9 main: VOID_TOKEN MAIN_TOKEN '(' ')' '{' instruction_array . '}'
   10 instruction_array: instruction_array . instruction

    IF_TOKEN     shift, and go to state 19
    WHILE_TOKEN  shift, and go to state 20
    NUM_TOKEN    shift, and go to state 22
    ID_TOKEN     shift, and go to state 23
    '-'          shift, and go to state 24
    '}'          shift, and go to state 77
    '('          shift, and go to state 25

    instruction          go to state 26
    assignment           go to state 27
    expression           go to state 28
    value                go to state 29
    if_instruction       go to state 30
    if_else_instruction  go to state 31
    while_instruction    go to state 32
    apply_function       go to state 33


state 69

   33 condition: expression EQUAL_TOKEN . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 78
    value           go to state 29
    apply_function  go to state 33


state 70

   31 condition: expression '<' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 79
    value           go to state 29
    apply_function  go to state 33


state 71

   32 condition: expression '>' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 80
    value           go to state 29
    apply_function  go to state 33


state 72

   28 if_instruction: IF_TOKEN '(' condition ')' . '{' instruction_array '}'
   29 if_else_instruction: IF_TOKEN '(' condition ')' . '{' instruction_array '}' ELSE_TOKEN '{' instruction_array '}'

    '{'  shift, and go to state 81


state 73

   30 while_instruction: WHILE_TOKEN '(' condition ')' . '{' instruction_array '}'

    '{'  shift, and go to state 82


state 74

    4 int_function: function_header '{' instruction_array RETURN_TOKEN expression ';' '}' .

    $default  reduce using rule 4 (int_function)


state 75

   34 apply_function: ID_TOKEN '(' apply_list ')' .

    $default  reduce using rule 34 (apply_function)


state 76

   36 apply_list: apply_list ',' . expression

    NUM_TOKEN  shift, and go to state 22
    ID_TOKEN   shift, and go to state 40
    '-'        shift, and go to state 24
    '('        shift, and go to state 25

    expression      go to state 83
    value           go to state 29
    apply_function  go to state 33


state 77

    9 main: VOID_TOKEN MAIN_TOKEN '(' ')' '{' instruction_array '}' .

    $default  reduce using rule 9 (main)


state 78

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   33 condition: expression EQUAL_TOKEN expression .

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 33 (condition)


state 79

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   31 condition: expression '<' expression .

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 31 (condition)


state 80

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   32 condition: expression '>' expression .

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 32 (condition)


state 81

   28 if_instruction: IF_TOKEN '(' condition ')' '{' . instruction_array '}'
   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' . instruction_array '}' ELSE_TOKEN '{' instruction_array '}'

    $default  reduce using rule 11 (instruction_array)

    instruction_array  go to state 84


state 82

   30 while_instruction: WHILE_TOKEN '(' condition ')' '{' . instruction_array '}'

    $default  reduce using rule 11 (instruction_array)

    instruction_array  go to state 85


state 83

   20 expression: expression . '+' expression
   21           | expression . '-' expression
   22           | expression . '*' expression
   23           | expression . '/' expression
   36 apply_list: apply_list ',' expression .

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50

    $default  reduce using rule 36 (apply_list)


state 84

   10 instruction_array: instruction_array . instruction
   28 if_instruction: IF_TOKEN '(' condition ')' '{' instruction_array . '}'
   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array . '}' ELSE_TOKEN '{' instruction_array '}'

    IF_TOKEN     shift, and go to state 19
    WHILE_TOKEN  shift, and go to state 20
    NUM_TOKEN    shift, and go to state 22
    ID_TOKEN     shift, and go to state 23
    '-'          shift, and go to state 24
    '}'          shift, and go to state 86
    '('          shift, and go to state 25

    instruction          go to state 26
    assignment           go to state 27
    expression           go to state 28
    value                go to state 29
    if_instruction       go to state 30
    if_else_instruction  go to state 31
    while_instruction    go to state 32
    apply_function       go to state 33


state 85

   10 instruction_array: instruction_array . instruction
   30 while_instruction: WHILE_TOKEN '(' condition ')' '{' instruction_array . '}'

    IF_TOKEN     shift, and go to state 19
    WHILE_TOKEN  shift, and go to state 20
    NUM_TOKEN    shift, and go to state 22
    ID_TOKEN     shift, and go to state 23
    '-'          shift, and go to state 24
    '}'          shift, and go to state 87
    '('          shift, and go to state 25

    instruction          go to state 26
    assignment           go to state 27
    expression           go to state 28
    value                go to state 29
    if_instruction       go to state 30
    if_else_instruction  go to state 31
    while_instruction    go to state 32
    apply_function       go to state 33


state 86

   28 if_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' .
   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' . ELSE_TOKEN '{' instruction_array '}'

    ELSE_TOKEN  shift, and go to state 88

    $default  reduce using rule 28 (if_instruction)


state 87

   30 while_instruction: WHILE_TOKEN '(' condition ')' '{' instruction_array '}' .

    $default  reduce using rule 30 (while_instruction)


state 88

   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' ELSE_TOKEN . '{' instruction_array '}'

    '{'  shift, and go to state 89


state 89

   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' ELSE_TOKEN '{' . instruction_array '}'

    $default  reduce using rule 11 (instruction_array)

    instruction_array  go to state 90


state 90

   10 instruction_array: instruction_array . instruction
   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' ELSE_TOKEN '{' instruction_array . '}'

    IF_TOKEN     shift, and go to state 19
    WHILE_TOKEN  shift, and go to state 20
    NUM_TOKEN    shift, and go to state 22
    ID_TOKEN     shift, and go to state 23
    '-'          shift, and go to state 24
    '}'          shift, and go to state 91
    '('          shift, and go to state 25

    instruction          go to state 26
    assignment           go to state 27
    expression           go to state 28
    value                go to state 29
    if_instruction       go to state 30
    if_else_instruction  go to state 31
    while_instruction    go to state 32
    apply_function       go to state 33


state 91

   29 if_else_instruction: IF_TOKEN '(' condition ')' '{' instruction_array '}' ELSE_TOKEN '{' instruction_array '}' .

    $default  reduce using rule 29 (if_else_instruction)
